<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="kz.gereski.m.homebank.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|fill"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/etWhen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:hint="@string/date"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#010101"
            android:textColor="#fff7f9"
            android:textStyle="bold"/>

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <EditText
            android:id="@+id/etWhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:editable="true"
            android:gravity="fill_horizontal|center"
            android:hint="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etWhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:editable="true"
            android:gravity="fill_horizontal|center"
            android:hint="@string/shop_name"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:editable="true"
            android:gravity="fill_horizontal|center"
            android:hint="@string/price"
            android:inputType="numberSigned|numberDecimal"
            android:text="0.0"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:editable="true"
            android:gravity="fill_horizontal|center"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Spinner
            android:id="@+id/spnGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:prompt="@string/group_prompt"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

        <Space
            android:layout_width="40px"
            android:layout_height="40px" />

        <Button
            android:id="@+id/btAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="#12344a"
            android:padding="20sp"
            android:textSize="18sp" />
    </LinearLayout>


</ScrollView>
