<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FirstPageActivity"
    android:clickable="true">

    <Space
        android:layout_width="@dimen/margin20sp"
        android:layout_height="@dimen/margin20sp" />

    <TextView
        android:id="@+id/textCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/credit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#58100b" />

    <TextView
        android:id="@+id/textDailyCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#12344a"
        android:textColor="#ffffff"
        android:text="@string/daily_credit"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPredictCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#061018"
        android:textColor="#ffffff"
        android:text="@string/predict_credit"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:foregroundGravity="top"
        android:overScrollMode="ifContentScrolls" />

</LinearLayout>
