<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonthCalendarPageActivity">

    <!-- The navigation drawer -->
    <!--<include layout="@layout/navigation" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#58100b">

            <TextView
                android:id="@+id/txtExpensesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_column="0"
                android:layout_row="0"
                android:gravity="left"
                android:paddingRight="8dp"
                android:text="@string/credit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtExpensesVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="0"
                android:gravity="left"
                android:text="0.00"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#12344a">

            <TextView
                android:id="@+id/txtDailyExpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/daily_credit"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDailyExpVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="1"
                android:gravity="left"
                android:text="0.00"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#061018">

            <TextView
                android:id="@+id/txtPredictLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_row="2"
                android:text="@string/predict_credit"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPredictVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="2"
                android:text="0.00"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menuDateLayout"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btMenuList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/txtMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Month"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <kz.gereski.m.homebank.views.CalendarTableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:shrinkColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:showDividers="middle|beginning|end|none"
                android:shrinkColumns="*">

                <TextView
                    android:id="@+id/txtSo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Вс"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#77150e"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Пн"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtTu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Вт"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtWe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Ср"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtTh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Чт"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtFr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Пт"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtSu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Сб"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TableRow>
        </kz.gereski.m.homebank.views.CalendarTableLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <kz.gereski.m.homebank.views.CalendarTableLayout
                android:id="@+id/tbMonth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal"
                android:fillViewport="true"
                android:showDividers="beginning|end"
                android:shrinkColumns="*"
                android:touchscreenBlocksFocus="true"
                android:weightSum="6">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></TableRow>
            </kz.gereski.m.homebank.views.CalendarTableLayout>
        </ScrollView>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>